# pymarty

./: CMakeLists.txt  README.md
src/marty_pybinding/: CMakeLists.txt  simple_py.cpp
src/pymarty/: __init__.py  index.py
